# advent-of-code-2023

./: .gitignore  Cargo.toml  README.md
benches/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day1.rs  day10.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs
inputs/: day8-sample-3.txt
src/: day03.rs  day04.rs  day08.rs  day09.rs  day1.rs  day10.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs  lib.rs  utils.rs
